; ModuleID = '/home/carl/AnghaBench/git/extr_revision.c_gc_boundary.c'
source_filename = "/home/carl/AnghaBench/git/extr_revision.c_gc_boundary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_array = type { i64, i64 }

@entry_unshown = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.object_array*)* @gc_boundary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gc_boundary(%struct.object_array* %0) #0 {
  %2 = alloca %struct.object_array*, align 8
  store %struct.object_array* %0, %struct.object_array** %2, align 8
  %3 = load %struct.object_array*, %struct.object_array** %2, align 8
  %4 = getelementptr inbounds %struct.object_array, %struct.object_array* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load %struct.object_array*, %struct.object_array** %2, align 8
  %7 = getelementptr inbounds %struct.object_array, %struct.object_array* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %5, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load %struct.object_array*, %struct.object_array** %2, align 8
  %12 = load i32, i32* @entry_unshown, align 4
  %13 = call i32 @object_array_filter(%struct.object_array* %11, i32 %12, i32* null)
  br label %14

14:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @object_array_filter(%struct.object_array*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
